--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,6 +1,8 @@
 @import url("page.css");
 @import url("news.css");
 @import url("plates.css");
+/*/
+@import url("modal.css");
 
 /*PERSONAL CABINET*/
 .page-title{
