--- a/public_html/css/forms.css
+++ b/public_html/css/forms.css
@@ -42,7 +42,6 @@
     border-width:                       2px;
     padding:                            .75rem 1.25rem;
 }
-
 .s-input-box label{
     position:                           absolute;
     top:                                1.5rem;
@@ -96,4 +95,26 @@
     box-shadow:                         0 0 0 4px darkred inset;
     color:                              darkred;
 }
-
+.btn-grp{
+    display:                            flex;
+}
+.btn-grp .btn-main{
+}
+.btn-grp .btn-main:first-child{
+    border-top-right-radius:            0;
+    border-bottom-right-radius:         0;
+    margin-right:                       1px;
+}
+.btn-grp .btn-main:last-child{
+    border-top-left-radius:             0;
+    border-bottom-left-radius:          0;
+    margin-right:                       0;
+}
+/**/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: inherit;
+}
