--- a/public_html/css/bs-addon.css
+++ b/public_html/css/bs-addon.css
@@ -38,6 +38,9 @@
 .w-20{
     width:                          20%;
 }
+.w-30rem{
+    width:                          30rem;
+}
 /**/
 .m-\.75{
     margin:                         .75rem;
