--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -465,3 +465,9 @@ body.studentSignIn{
     display:                        none;
 }
 
+/* account*/
+.shadow-box-st{
+    -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+}
