--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -471,3 +471,47 @@ body.studentSignIn{
     -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
+/* show menu*/
+.show-menu{
+    width:                          3rem;
+    height:                         3rem;
+    border:                         solid 2px white;
+    margin-top:                     calc(1.5rem + 1px);
+    border-radius:                  .5rem;
+    position:                       relative;
+    cursor:                         pointer;
+}
+.show-menu span{
+    display:                        block;
+    position:                       absolute;
+    left:                           10px;
+    right:                          10px;
+    height:                         3px;
+    background-color:               darkred;
+    top:                            1.3rem;
+    transition:                     all .2s linear;
+}
+.show-menu span:first-child{
+    top:                            0.65rem;
+}
+.show-menu span:last-child{
+    top:                            1.95rem;
+}
+.show-menu.active span:first-child{
+    transform:                      rotateZ(-45deg) translate3d(.11em, -.11em, 0);
+    top:                            1.4rem;
+}
+.show-menu.active span:last-child{
+    transform:                      rotateZ(45deg) translate3d(.11em, .11em, 0);
+    top:                            1.1rem;
+}
+.show-menu.active span:nth-child(2){
+    opacity:                        0;
+}
+ul#menu{
+    list-style:                     none;
+    height:                         0;
+    overflow:                       hidden;
+    display:                        block;
+    transition:                     all .2s linear;
+}
