--- a/public_html/css/bs-addon.css
+++ b/public_html/css/bs-addon.css
@@ -19,6 +19,9 @@
 .fs-\.5{
     font-size:                      .5rem;
 }
+.fs-\.65{
+    font-size:                      .65rem;
+}
 /* paddings */
 .p-\.75{
     padding:                        .75rem;
@@ -42,6 +45,13 @@
     width:                          30rem;
 }
 /**/
+@media (min-width: 992px) {
+    .mw-md-50rem{
+        max-width: 50rem !important;
+    }
+}
+
+/**/
 .m-\.75{
     margin:                         .75rem;
 }
@@ -52,6 +62,12 @@
 .my-\.75{
     margin-top:                     .75rem;
     margin-bottom:                  .75rem;
+}
+.mt-20vh{
+    margin-top:                     20vh;
+}
+.mt-40vh{
+    margin-top:                     40vh;
 }
 /**/
 .color\:red{
