--- a/public_html/css/bs-addon.css
+++ b/public_html/css/bs-addon.css
@@ -22,6 +22,9 @@
 .fs-\.65{
     font-size:                      .65rem;
 }
+.fw-500{
+    font-weight:                    500;
+}
 /* paddings */
 .p-\.75{
     padding:                        .75rem;
