--- a/public_html/css/page.css
+++ b/public_html/css/page.css
@@ -72,4 +72,11 @@ section.page-content{
     display:                    block;
     padding-top:                8rem !important;
     padding-bottom:             4rem !important;
+    min-height:                 100vh;
+}
+/**/
+section.page{
+    min-height:                 calc(100vh - 12rem);
+    display:                    grid;
+    align-items:                center;
 }
